# aw-watcher-llm

./: Makefile  README.md  pyproject.toml
aw_watcher_llm/: activitywatch.py  buckets.py  cli.py  codex.py  demo.py  opencode.py  qoder.py  runner.py  schema.py  visualization_server.py
docs/: aw-watcher-llm-demo.md  custom-visual-design.md  local-change-notes-2026-04-23.md  product-summary-2026-04-23.md
tests/: test_cli.py  test_qoder.py
visualization/: README.md
