[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aw-watcher-llm"
version = "0.1.0"
description = "ActivityWatch watcher skeleton for LLM and AI coding activity"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "rqdmap" }
]
dependencies = []

[project.scripts]
aw-watcher-llm = "aw_watcher_llm.cli:main"

[tool.setuptools]
packages = ["aw_watcher_llm"]
